--- a/vars.yml
+++ b/vars.yml
@@ -1,5 +1,5 @@
 studentid: << Student ID Number >>
-studentrouter: <<Router Hostname >>
+studentrouter: R<< Student ID Number >>
 ansible_network_os: ios
 dns_servers:
   - 8.8.8.8
